# PasteurAIze

./: .gitignore  README.md  pyproject.toml
pasteuraize/: .env.exemple  auto_table.py  create_yaml.py  data_agent.py  example.yaml  main_agent.py  manage_schema.py  pasteuraize.py  search_agent.py  utils_cols.py
pasteuraize/mcp_scholarly/: server.py
